2004-02-22 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* doc/doxygen-header:  Style sheet changes to counteract style
	sheet changes in Doxygen 1.3.6.
	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/field.cpp
	* src/libopenvrml/openvrml/field.h
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/node_ptr.cpp
	* src/libopenvrml/openvrml/node_ptr.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2004-02-22 Braden McDaniel  <braden@endoframe.com>

	* doc/doxygen-header:  Style sheet changes to counteract style
	sheet changes in Doxygen 1.3.6.

2004-02-20 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field.cpp:  Removed obsolete doc-
	comments.

2004-02-20 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field.h:  Changed event_listener and
	event_emitter to inherit boost::noncopyable.

2004-02-19 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/field.h:  Replaced a variable
	definition in "FieldValueConcept::constraints" with a typedef to
	exercise the "value_type" typedef associated with the concept.
	This quells a gcc warning about an unused variable.

2004-02-09 Braden McDaniel  <braden@endoframe.com>

	Cruft removal.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/browser.h

2004-02-08 Braden McDaniel  <braden@endoframe.com>

	Changed whitespace convention used in Java source to match Sun
	convention.

	* java/vrml/BaseNode.java
	* java/vrml/Browser.java
	* java/vrml/ConstField.java
	* java/vrml/ConstMField.java
	* java/vrml/Event.java
	* java/vrml/Field.java
	* java/vrml/InvalidEventInException.java
	* java/vrml/InvalidEventOutException.java
	* java/vrml/InvalidExposedFieldException.java
	* java/vrml/InvalidFieldChangeException.java
	* java/vrml/InvalidFieldException.java